# Butu

./: .env.example  .gitignore  DESIGN.md  README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
air-mouse/: index.html
scripts/: build-tizen.sh  build-webos.sh
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs  spatial_bridge.rs
src/components/: ButuPlayer.tsx  ContentDetailPage.tsx  HeroCarousel.tsx  JellyfinSetup.tsx  LiquidCursor.tsx  MediaCard.tsx  MediaStage.tsx  NavigationSidebar.tsx
src/data/: mockLibrary.ts
src/hooks/: usePlatformBridge.ts  useSpatialCursor.ts  useSpatialNavigation.ts  useWebSocketBridge.ts
src/services/: jellyfinApi.ts
src/store/: useButuStore.ts
src/types/: index.ts
