[package]
name = "butu"
version = "0.1.0"
description = "Butu — A high-performance, TV-optimized cinematic media client"
authors = ["Butu"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.70"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.6", features = [
  "shell-open",
  "window-all",
  "fs-all",
  "path-all",
  "dialog-all"
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.21"
futures-util = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[features]
custom-protocol = ["tauri/custom-protocol"]
